--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ h6, .h6 {
 }
 
 p {
+  font-size: 25px;
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -418,6 +419,7 @@ legend + * {
   direction: ltr;
 }
 */
+
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -456,8 +458,15 @@ progress {
   display: none !important;
 }
 
+.intro{
+  font-size: 1.5rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  margin-bottom: 0;
+  margin-top: 1.2rem;  
+}
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.6rem;
   font-weight: 300;
 }
 
